Update reference/rest/src/main/java/io/a2a/server/rest/quarkus/A2AServerRoutes.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>